--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -69,6 +69,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/login"
+                    android:onClick="loginAccount"
                     android:theme="@style/RaisedButtonDark" />
 
                 <RelativeLayout
@@ -82,8 +83,7 @@
                         android:layout_height="wrap_content"
                         android:text="@string/dont_have_account"
                         android:textColor="@color/white"
-                        android:textSize="@dimen/text_size"
-                        android:textStyle="bold" />
+                        android:textSize="@dimen/text_size"/>
 
                     <TextView
                         android:id="@+id/tv_create_here"
