--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,13 +1,100 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     tools:context="com.zeze.platzigram.fragment.ProfileFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appBar_profile"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:fitsSystemWindows="true"
+        android:theme="@style/AppTheme.AppBarOverlay">
 
-</FrameLayout>
+        <android.support.design.widget.CollapsingToolbarLayout
+            android:id="@+id/collapsing_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fitsSystemWindows="true"
+            app:contentScrim="@color/colorPrimary"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            app:statusBarScrim="@color/colorPrimary">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center|top"
+                android:layout_marginLeft="@dimen/fab_margin"
+                android:layout_marginRight="@dimen/fab_margin"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:paddingBottom="20dp"
+                android:paddingTop="200dp">
+
+                <TextView
+                    android:id="@+id/tv_username"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/author"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/title_size_cardview" />
+
+            </LinearLayout>
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="?attr/colorPrimary"
+                app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+        </android.support.design.widget.CollapsingToolbarLayout>
+
+    </android.support.design.widget.AppBarLayout>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerview_picture"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </android.support.v7.widget.RecyclerView>
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:layout_width="@dimen/image_diameter"
+        android:layout_height="@dimen/image_diameter"
+        android:layout_gravity="center|top"
+        android:layout_marginTop="@dimen/margintop_circle"
+        android:elevation="@dimen/elevation_circle"
+        android:src="@drawable/catedral"
+        app:dependTargetY="@dimen/limit_y_circle"
+        app:dependType="y"
+        app:dependsOn="@+id/appBar_profile"
+        app:layout_behavior="com.zoonref.SimpleViewBehavior"
+        app:targetHeight="@dimen/toolbar_circle_width"
+        app:targetWidth="@dimen/toolbar_circle_width"
+        app:targetX="@dimen/targetx"
+        app:targetY="@dimen/targetY" />
+
+    <TextView
+        android:id="@+id/tf_username"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/marginleft_title_toolbar"
+        android:layout_marginTop="@dimen/margintop_title_toolbar"
+        android:alpha="0"
+        android:elevation="@dimen/elevation_circle"
+        android:gravity="center_vertical"
+        android:text="@string/author"
+        android:textColor="@color/white"
+        android:textSize="@dimen/title_size_toolbar"
+        app:dependTargetY="@dimen/limit_y_tv"
+        app:dependType="y"
+        app:dependsOn="@+id/appBar_profile"
+        app:layout_behavior="com.zoonref.SimpleViewBehavior"
+        app:targetAlpha="1"
+        app:targetY="@dimen/targetY_tv" />
+
+</android.support.design.widget.CoordinatorLayout>
