--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,4 +14,18 @@
     <dimen name="margin_left_cardview">5dp</dimen>
     <dimen name="like_margin_top">10dp</dimen>
     <dimen name="bottombar_height">70dp</dimen>
+    <dimen name="appbar_height">250dp</dimen>
+    <dimen name="divider_height">1dp</dimen>
+    <dimen name="image_diameter">160dp</dimen>
+    <dimen name="margintop_circle">30dp</dimen>
+    <dimen name="elevation_circle">10dp</dimen>
+    <dimen name="limit_y_circle">-206dp</dimen>
+    <dimen name="targetx">16dp</dimen>
+    <dimen name="targetY">-15dp</dimen>
+    <dimen name="toolbar_circle_width">40dp</dimen>
+    <dimen name="title_size_toolbar">18sp</dimen>
+    <dimen name="marginleft_title_toolbar">72dp</dimen>
+    <dimen name="margintop_title_toolbar">-100dp</dimen>
+    <dimen name="limit_y_tv">-250dp</dimen>
+    <dimen name="targetY_tv">-5dp</dimen>
 </resources>
