--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -7,7 +7,7 @@
     tools:context="com.zeze.platzigram.fragment.ProfileFragment">
 
     <android.support.design.widget.AppBarLayout
-        android:id="@+id/appBar_profile"
+        android:id="@+id/appBarProfile"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
@@ -15,7 +15,7 @@
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.design.widget.CollapsingToolbarLayout
-            android:id="@+id/collapsing_toolbar"
+            android:id="@+id/toolbar_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fitsSystemWindows="true"
@@ -27,20 +27,21 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center|top"
-                android:layout_marginLeft="@dimen/fab_margin"
-                android:layout_marginRight="@dimen/fab_margin"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
                 android:gravity="center"
                 android:orientation="vertical"
                 android:paddingBottom="20dp"
                 android:paddingTop="200dp">
 
                 <TextView
-                    android:id="@+id/tv_username"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
                     android:text="@string/author"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/title_size_cardview" />
+                    android:textColor="@android:color/white"
+                    android:textSize="30sp" />
+
 
             </LinearLayout>
 
@@ -48,53 +49,54 @@
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                android:background="?attr/colorPrimary"
+                app:layout_collapseMode="pin"
                 app:popupTheme="@style/AppTheme.PopupOverlay" />
 
         </android.support.design.widget.CollapsingToolbarLayout>
-
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerview_picture"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-    </android.support.v7.widget.RecyclerView>
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:layout_width="@dimen/image_diameter"
         android:layout_height="@dimen/image_diameter"
         android:layout_gravity="center|top"
-        android:layout_marginTop="@dimen/margintop_circle"
+        android:layout_marginTop="@dimen/fab_margin"
         android:elevation="@dimen/elevation_circle"
         android:src="@drawable/catedral"
-        app:dependTargetY="@dimen/limit_y_circle"
+        app:dependTargetY="@dimen/limitY_circleimage"
         app:dependType="y"
-        app:dependsOn="@+id/appBar_profile"
+        app:dependsOn="@+id/appBarProfile"
         app:layout_behavior="com.zoonref.SimpleViewBehavior"
-        app:targetHeight="@dimen/toolbar_circle_width"
-        app:targetWidth="@dimen/toolbar_circle_width"
-        app:targetX="@dimen/targetx"
-        app:targetY="@dimen/targetY" />
+        app:targetHeight="@dimen/width_circleimagetoolbar"
+        app:targetWidth="@dimen/width_circleimagetoolbar"
+        app:targetX="5dp"
+        app:targetY="@dimen/margintoptoolbar_circleimageprofile" />
 
     <TextView
-        android:id="@+id/tf_username"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/marginleft_title_toolbar"
-        android:layout_marginTop="@dimen/margintop_title_toolbar"
+        android:layout_height="?attr/actionBarSize"
+        android:layout_marginLeft="100dp"
         android:alpha="0"
-        android:elevation="@dimen/elevation_circle"
+        android:elevation="10dp"
         android:gravity="center_vertical"
         android:text="@string/author"
         android:textColor="@color/white"
-        android:textSize="@dimen/title_size_toolbar"
-        app:dependTargetY="@dimen/limit_y_tv"
+        android:textSize="18dp"
+        android:textStyle="bold"
+        app:dependTargetY="-250dp"
         app:dependType="y"
-        app:dependsOn="@+id/appBar_profile"
+        app:dependsOn="@+id/appBarProfile"
         app:layout_behavior="com.zoonref.SimpleViewBehavior"
         app:targetAlpha="1"
-        app:targetY="@dimen/targetY_tv" />
+        app:targetY="0dp" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerview_picture"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="10dp"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
 </android.support.design.widget.CoordinatorLayout>
