--- a/app/src/main/res/layout/activity_picture_detail.xml
+++ b/app/src/main/res/layout/activity_picture_detail.xml
@@ -11,21 +11,24 @@
         android:id="@+id/appBar"
         android:layout_width="match_parent"
         android:layout_height="@dimen/appbar_height"
+        android:fitsSystemWindows="true"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/collapsing_toolbar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed"
-            app:contentScrim="@color/colorPrimary">
+            app:contentScrim="@color/colorPrimary"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <ImageView
                 android:id="@+id/img_header"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@drawable/catedral"
+                android:fitsSystemWindows="true"
                 android:scaleType="centerCrop"
+                android:transitionName="@string/img_transition"
                 app:layout_collapseMode="parallax" />
 
             <android.support.v7.widget.Toolbar
@@ -99,7 +102,7 @@
                 android:paddingRight="@dimen/fab_margin"
                 android:paddingTop="@dimen/fab_margin"
                 android:text="@string/lorem"
-                android:textSize="@dimen/text_size"/>
+                android:textSize="@dimen/text_size" />
 
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
@@ -109,8 +112,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@drawable/heart"
         app:layout_anchor="@+id/appBar"
-        app:layout_anchorGravity="bottom|end"/>
+        app:layout_anchorGravity="bottom|end"
+        app:srcCompat="@drawable/heart" />
 
 </android.support.design.widget.CoordinatorLayout>
